--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
           </div>
           <div id="other-links">
             <div id="facebook-login">
-              <img src="img/logo_facebook.svg" alt="Facebbok Login">
-              <span>Entrar com o Facebook</span>
+              <a href="#">
+                <img src="img/logo_facebook.svg" alt="Facebbok Login">
+                <span>Entrar com o Facebook</span>
+              </a>
             </div>
             <div id="forgot-pass">
               <a herf="#">Esqueceu a senha?</a>
