--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <li><a href="#">Instagram Lite</a></li>
       </ul>
     </nav>
-    <p id="copywright">&copy;2022 Instagram from Meta</p>
+    <p id="copyright">&copy;2022 Instagram from Meta</p>
   </footer>
 
 </body>
